--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "sass-lint": "^1.10.2",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
